# vibe

./: LICENSE  README.md  pyproject.toml
tests/: test_cli.py
vibe/: __init__.py  __main__.py  cli.py
