[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe"
version = "0.1.0"
description = "A CLI tool to template and generate prompts for agents."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "jinja2>=3.1",
]

[project.scripts]
vibe = "vibe.cli:main"
